# dataScienceClass

./: main.py  pyproject.toml
.ipynb_checkpoints/: bank_churn-checkpoint.ipynb
airbnb/: .gitignore  airbnb.ipynb  pyproject.toml
airbnb/.ipynb_checkpoints/: airbnb-checkpoint.ipynb
airbnb/.virtual_documents/: airbnb.ipynb
bank_churn/: app.py  bank_churn.ipynb  bank_churn_v2.ipynb  bank_churn_v3.ipynb  lr_churn_pipeline.pkl  model_metadata.json  pyproject.toml
bank_churn/.ipynb_checkpoints/: README-checkpoint.md  bank_churn_v2-checkpoint.ipynb  bank_churn_v3-checkpoint.ipynb
bank_marketing/: main.py  pyproject.toml  readme.md  readme_1.md
global_Video_Game_Sales/: .gitignore  app.py  arima_model.pkl  main.py  pyproject.toml  video_game_sales.ipynb
global_Video_Game_Sales/.ipynb_checkpoints/: video_game_sales-checkpoint.ipynb
global_Video_Game_Sales/.virtual_documents/: video_game_sales.ipynb
